syntax = "proto3";
package app.service1.pb;
option go_package = "app/service1/pb";

import "data.proto";
import "google/api/annotations.proto";

service ProductService {
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {
    option (google.api.http) = {
      get : "/api/v1/products"
    };
  }

  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {
    option (google.api.http) = {
      post : "/api/v1/products",
      body : "*"
    };
  }
}

message ListProductsRequest {
  // ids - support multiple ids
  repeated uint64 ids = 1;
  // names - support multiple names
  repeated string names = 2;
  // limit
  uint32 limit = 3;
  // offset
  uint64 offset = 4;
}

message ListProductsResponse { repeated Product data = 1; }

message CreateProductRequest {
  string name = 1;
  double price = 2;
}

message CreateProductResponse { uint64 id = 1; }
